--- a/partials/globals.scss
+++ b/partials/globals.scss
@@ -11,3 +11,16 @@ img {
   width: 300px;
   height: 200px;
 }
+.note {
+  position: fixed;
+  margin: auto;
+  top: 100px;
+  left: -700px;
+  background: aqua;
+  border-radius: 5px;
+  padding: 1rem 1.7rem;
+  color: black;
+  max-width: 60%;
+  font-weight: 700;
+  transition: all 0.5s ease-in-out;
+}
