--- a/style.scss
+++ b/style.scss
@@ -6,7 +6,7 @@
 @import "/partials/globals.scss";
 @import "/partials/index.scss";
 @import "/partials/category.scss";
-@import "/partials/product.scss";
+@import "/partials/cart.scss";
 @import "/partials/products.scss";
 
 @import url("https://fonts.googleapis.com/css2?family=Alkatra:wght@400;500;600;700&family=Libre+Franklin:ital,wght@0,500;0,600;0,700;1,500;1,600&family=Noto+Serif:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,900;1,400;1,500;1,800;1,900&display=swap");
